Fixed some issues on small devices, cleaned up CSS

--- a/css/hippo.css
+++ b/css/hippo.css
@@ -1,3 +1,4 @@
+/* Index CSS */
 body {
 	padding-top: 80px;
 }
@@ -10,13 +11,14 @@ body {
 	height: 60px;
 	background: linear-gradient(to bottom, #C5C4C8, #A9A9AE);
 	font-family: 'Happy Monkey', cursive;
-	border: 1px solid black;
+	border: 1px solid #5C5757;
 }
 
 p , h4 {
 	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 }
+
 
 #hippoBrand {
 	font-size: 35px;
@@ -44,26 +46,6 @@ p , h4 {
 	background-color: #B4B4B4;
 }
 
-#hippoCarousel {
-	border: 1px solid #5C5757;
-}
-
-.carousel-inner > .item > img {
-	margin: 0 auto;
-}
-
-.carousel-content {
-	position: absolute;
-	bottom: 20%;
-	left: 0;
-	z-index: 20;
-	color: #5C5757;
-	width: 100%;
-	background-color: rgba(255,255,255,0.7);
-	font-size: 20px;
-	text-align: center;
-}
-
 footer {
 	margin-top: 20px;
 	font-size: 20px;
@@ -86,6 +68,53 @@ footer > .container > p {
 	padding-right: 10px;
 }
 
+/* Make collapsable menu easy to read */
+@media (max-width: 767px) {
+	#hippoNavList {
+		background-color: #A9A9AE;
+		border: 1px solid #5C5757;
+		border-top: none;
+	}
+}
+
+/* Hiding on small screens so everything fits */
+@media (max-width: 480px) {
+	#footnote {
+		display: none;
+	}
+
+	#hippoLogo {
+		display: none;
+	}
+
+	#hippoBrand {
+		font-size: 20px; 
+		margin-top: 5px;
+	}
+}
+
+/* Home Page CSS */
+#hippoCarousel {
+	border: 1px solid #5C5757;
+}
+
+.carousel-inner > .item > img {
+	margin: 0 auto;
+}
+
+.carousel-content {
+	position: absolute;
+	bottom: 20%;
+	left: 0;
+	z-index: 20;
+	color: #5C5757;
+	width: 100%;
+	background-color: rgba(255,255,255,0.7);
+	font-size: 20px;
+	text-align: center;
+}
+
+/* Info Page CSS */
 aside > .nav-pills > li > a, aside > .nav-pills > li.active > a, aside > .nav-pills > li.active > a:focus {
 	display: block;
 	text-align: left;
@@ -98,36 +127,6 @@ aside > .nav-pills > li > a, aside > .nav-pills > li.active > a, aside > .nav-pi
 aside > .nav-pills > li.active > a:hover {
 	background-color: #eee;
 	color: #5C5757;
-}
-
-.hippolinks {
-	text-align: center;
-	font-size: 20px;
-	color: #5C5757;
-}
-
-.thumbnail > img {
-	height: 175px;
-}
-
-.hippopreview {
-	width: 100%;
-}
-
-.modal {
-	overflow: auto;
-}
-
-.modal-content {
-	width: 80%;
-	max-width: 800px;
-	margin: auto;
-}
-
-.thumbnail > figcaption {
-	color: #5C5757;
-	font-style: italic;
-	text-align: center;
 }
 
 .infoPics {
@@ -165,7 +164,39 @@ h4 {
 	text-decoration: underline;
 }
 
+/* Media Page CSS */
+.thumbnail > img {
+	height: 175px;
+}
+
+.hippopreview {
+	width: 100%;
+}
+
+.modal {
+	overflow: auto;
+}
+
+.modal-content {
+	width: 80%;
+	max-width: 800px;
+	margin: auto;
+}
+
+.thumbnail > figcaption {
+	color: #5C5757;
+	font-style: italic;
+	text-align: center;
+}
+
 video {
 	width: 100%;
 	border: 1px solid #5C5757;
+}
+
+/* Links Page CSS */
+.hippolinks {
+	text-align: center;
+	font-size: 20px;
+	color: #5C5757;
 }
